--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <a class="Link_Button" target="_blank" href="https://www.facebook.com/people/Md-Mainuddin/pfbid02myP4zUP3LBzJubYRgMTLqaQRLYpF9ufhRNh89PX86ktG4bSWZCuuoBhuYuukCNAl/?mibextid=ZbWKwL">HIRE ME</a>
         </div>
         <div class="Half-width">
-            <img src="images/peter.png">
+            <img src="images/mainuddin.png">
         </div>
     </section>
     <section class="background1">
         <div class="Half-width">
-            <img src="images/peter_dream.png" >
+            <img src="images/mainu2.png" >
         </div>
         <div class="Half-width first-half">
             <H1>Biography</H1>
